--- a/src/panels/place.css
+++ b/src/panels/place.css
@@ -164,6 +164,19 @@
   background-color: #4bb34b;
   color: #fff;
 }
+.Disable_link {
+  flex-grow: 1;
+  height: 65px;
+  border: 0;
+  border-radius: 25px;
+  line-height: 60px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 22px;
+  background-color: gray;
+  color: #fff;
+  pointer-events: none;
+}
 
 .Place__products-wrapper {
   position: relative;
@@ -287,6 +300,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  pointer-events: none;
 }
 
 .Place__order-time {
